add CRUD service about 'diagnostiv' and 'symptom' with documentation
