# src/app.js
@@ -13,6 +13,8 @@ import departmentRoutes from './routes/department.routes';
 import provinceRoutes from './routes/province.routes';
 import districtRoutes from './routes/district.routes';
 import establishmentRoutes from './routes/establishments.routes';
+import diagnosticRoutes from './routes/diagnostic.routes';
+import symptomRoutes from './routes/symptom.routes';
 
 const app = express();
 
@@ -28,9 +30,8 @@ app.use('/api/v1/departments', departmentRoutes);
 app.use('/api/v1/provinces', provinceRoutes);
 app.use('/api/v1/districts', districtRoutes);
 app.use('/api/v1/establishments', establishmentRoutes);
-
-
-  
+app.use('/api/v1/diagnostics', diagnosticRoutes);
+app.use('/api/v1/symptoms', symptomRoutes);
 
 app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDocument));
 
